Fixed z-fighting which is e.g. visible when the welcome page of pimcore is visible

--- a/src/Resources/public/css/pimcore/systemBanner.css
+++ b/src/Resources/public/css/pimcore/systemBanner.css
@@ -16,6 +16,7 @@
     top: 0;
     transform: translateX(30%) translateY(0%) rotate(45deg);
     transform-origin: top left;
+    z-index: 9999;
 }
 #system-banner:before,
 #system-banner:after {
